build(local): improve local build process and update README

--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-# TFHE_RS_VERSION=0.2.1
+# TFHE_RS_VERSION=0.3.1
 # TFHE_RS_PATH=../tfhe-rs
-# ZBC_DEVELOPMENT_PATH=../zbc-development
-# ZBC_SOLIDITY_PATH=../zbc-solidity
-# ZBC_FHE_TOOL_PATH=../zbc-fhe-tool
-#LOCAL_BUILD=false
+# FHEVM_SOLIDITY_PATH=../fhevm-solidity
+# FHEVM_TFHE_CLI_PATH=../fhevm-tfhe-cli
+# LOCAL_BUILD=false
 LOCAL_BUILD=true
-GOPRIVATE=github.com/zama-ai/*
